UX improvements - Fix search bar on top of page so it is always available without scrolling back to the top - Auto focus search box - Fix loading text not visible when typing in a new keyword

--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -1,3 +1,11 @@
+.navbar-parent {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: auto;
+  width: 100%;
+}
+
 .navbar {
   display: flex;
   align-items: center;
