--- a/src/containers/ImageSearch/styles.css
+++ b/src/containers/ImageSearch/styles.css
@@ -9,6 +9,10 @@
   margin-top: 20px;
 }
 
+.wrapper {
+  margin-top: 3.5rem;
+}
+
 .btn {
   padding: .5rem 1rem;
   font-size: 1rem;
